[package]
name = "kubectl-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
ansi_term = "0.12"
clap = { version = "3.1.11", features = [ "derive", "env" ] }
k8s-openapi = { version = "0.14.0", default-features = false, features = ["api", "v1_23"] }
krew-wasm-plugin-sdk = { git = "https://github.com/flavio/krew-wasm-plugin-sdk.git", tag = "v0.1.1" }
pem = "1.0.2"
term-table = "1.3.2"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter"] }
x509-parser = { version = "0.13.2", default_features = false }
